Added flying objects!

--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="KeyInputHandler.js"></script>
     <script type="text/javascript" src="HorizontalPaddle.js"></script>
     <script type="text/javascript" src="VerticalPaddle.js"></script>
+    <script type="text/javascript" src="FlyingObject.js"></script>
     <script type="text/javascript" src="GameManager.js"></script>
 </head>
 <body class="playing-field-body" onload="startGame()">
