--- a/index.htm
+++ b/index.htm
@@ -5,11 +5,11 @@
     <title>Double catch</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <script type="text/javascript" src="utility.js"></script>
-    <script type="text/javascript" src="KeyInputHandler.js"></script>
-    <script type="text/javascript" src="HorizontalPaddle.js"></script>
-    <script type="text/javascript" src="VerticalPaddle.js"></script>
-    <script type="text/javascript" src="FlyingObject.js"></script>
-    <script type="text/javascript" src="GameManager.js"></script>
+    <script type="text/javascript" src="classes/KeyInputHandler.js"></script>
+    <script type="text/javascript" src="classes/HorizontalPaddle.js"></script>
+    <script type="text/javascript" src="classes/VerticalPaddle.js"></script>
+    <script type="text/javascript" src="classes/FlyingObject.js"></script>
+    <script type="text/javascript" src="classes/GameManager.js"></script>
 </head>
 <body class="playing-field-body" onload="startGame()">
     <canvas id="playingField" width="1024" height="768"></canvas>
